# internal/routes/route_setup.go
@@ -26,8 +26,8 @@ import (
 	ctrlRulesets "github.com/NorskHelsenett/ror-api/internal/controllers/rulesetscontroller"
 	ctrlTasks "github.com/NorskHelsenett/ror-api/internal/controllers/taskscontroller"
 	ctrlUsers "github.com/NorskHelsenett/ror-api/internal/controllers/userscontroller"
-	"github.com/NorskHelsenett/ror-api/internal/controllers/v2/listviewcontroller"
 	v2resourcescontroller "github.com/NorskHelsenett/ror-api/internal/controllers/v2/resourcescontroller"
+	viewcontroller "github.com/NorskHelsenett/ror-api/internal/controllers/v2/viewcontroller"
 	ctrlWorkspaces "github.com/NorskHelsenett/ror-api/internal/controllers/workspacescontroller"
 	"github.com/NorskHelsenett/ror-api/internal/webserver/ratelimiter"
 
@@ -358,9 +358,10 @@ func SetupRoutes(router *gin.Engine) {
 	resourceRoute.GET("/uid/:uid", v2resourcescontroller.GetResource())
 	resourceRoute.PUT("/uid/:uid", v2resourcescontroller.UpdateResource())
 
-	listviewRoute := v2.Group("listview")
+	viewsRoute := v2.Group("views")
 	{
-		listviewRoute.GET("", listviewcontroller.GetListView())
+		viewsRoute.GET("", viewcontroller.GetViews())
+		viewsRoute.GET("/:viewid", viewcontroller.GetView())
 	}
 
 }
